--- a/main.css
+++ b/main.css
@@ -238,3 +238,65 @@ body {
 .own-btn-next {
 	right: 20px;
 }
+
+#open-create-user{
+	cursor: pointer;
+}
+
+.modal{
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1000;
+	background-color: rgba(0, 0, 0, 0.5);
+	width: 100%;
+	height: 100%;	
+}
+
+.modal-content{
+	background-color: white;
+	padding: 20px;
+	margin: 10% auto;
+	border-radius: 4px;
+	width: 400px;
+}
+
+.close{
+	color: #aaaaaa;
+	font-size: 28px;
+	font-weight: bold;
+	cursor: pointer;
+	float: right;
+}
+
+.modal h2 {
+	font-size: 24px;
+	margin-bottom: 20px;
+}
+
+.modal label{
+	display: block;
+	margin-bottom: 10px;
+}
+
+.modal input,
+.modal select{
+	display: block;
+	width: 100%;
+	padding: 10px;
+	border-radius: 4px;
+	border: 1px solid #dddddd;
+	margin-bottom: 10px;
+	box-sizing: border-box;
+}
+
+.modal input[type="submit"]{
+	background-color: #555555;
+	color: white;
+	border: none;
+	padding: 10px 20 px;
+	cursor: pointer;
+}
